added html.png to index.html, added some attributes to http response header in Application.java

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -98,7 +98,7 @@
 		<td>${qep.id}</td>
 		<td>${qep.description}</td>
 		<td>View</td>
-		<td><a href="@{Application.executeQuery(qep.id, "html")}">HTML</a></td>
+		<td><a href="@{Application.executeQuery(qep.id, "html")}"><img alt="HTML" src="@{'/public/images/html.png'}"/></a></td>
 		<td><a href="@{Application.executeQuery(qep.id, "xml")}"><img alt="XML" src="@{'/public/images/xml.png'}"/></a></td>
 		<td><a href="@{Application.executeQuery(qep.id, "json")}"><img alt="JSON" src="@{'/public/images/json.png'}"/></a></td>
 	</tr>
