added some actions to deal with file load/save

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -58,6 +58,11 @@ editAreaLoader.init({
         ${flash.error}
     </p>
 #{/if}
+#{if flash.success}
+    <p style="color:#0c0">
+        ${flash.success}
+    </p>
+#{/if}
 
 
 <div id="content">
