--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,8 +11,26 @@
         #{get 'moreScripts' /}
     </head>
     <body>
-    	<div id="all">
+    	<div id="all" align="center">
         	#{doLayout /}
+ 				
+ 	
+		     <div id="footer">
+		     	<div id="w3c">
+		     		<small>
+				 		<ul>
+				 			<li>XML results according to <a href="http://www.w3.org/TR/rdf-sparql-XMLres/">SPARQL Query Results XML Format</a></li>
+							<li>JSON results according to <a href="http://www.w3.org/TR/rdf-sparql-json-res/">Serializing SPARQL Query Results in JSON</a></li>
+						</ul>
+					</small>
+				</div>
+		    	<p>
+		    	Universidade Federal do Ceará - Advanced Research in DataBase - ARIDA<br/>
+		    	LNCC - Laboratório Nacional de Computação Científica
+		    	
+		    	</p>
+		    </div>
+        
         </div>
     </body>
 </html>
