--- a/app/views/Application/edit.html
+++ b/app/views/Application/edit.html
@@ -1,55 +1,9 @@
 #{extends 'main.html' /}
 #{set title:'Viewer' /}
 
-<script src="@{'/public/javascripts/edit_area/edit_area_full.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-<script language="javascript" type="text/javascript">
+<script language="Javascript" type="text/javascript" src="@{'/public/javascripts/edit_area/edit_area_full.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
-editAreaLoader.init({
-	id : "textarea_1"		
-	,syntax: "xml"			
-	,start_highlight: true		
-	,EA_load_callback: "editAreaLoaded"
-	,show_line_colors: true
-	,allow_toggle: false
-	,toolbar: "new_document, save, load, |, |, search, go_to_line, |, undo, redo, |, select_font, |, change_smooth_selection, highlight, reset_highlight, |, help"
-	,load_callback: "my_load"
-	,save_callback: "my_save"
-	,allow_resize: "both"
-	
-});
-
-		function editAreaLoaded(id){
-			if(id=="textarea_1")
-			{
-				open_file1();
-				open_file2();
-			}
-		}
-		
-		function open_file1()
-		{
-			var new_file= {id: "to\\ é # € to", text: "$authors= array();\n$news= array();", syntax: 'php', title: 'beautiful title'};
-			editAreaLoader.openFile('example_2', new_file);
-		}
-		
-		function open_file2()
-		{
-			var new_file= {id: "Filename", text: "<a href=\"toto\">\n\tbouh\n</a>\n<!-- it's a comment -->", syntax: 'html'};
-			editAreaLoader.openFile('example_2', new_file);
-		}
-		
-		// callback functions
-		function my_save(id, content){
-			alert("Here is the content of the EditArea '"+ id +"' as received by the save callback function:\n"+content);
-		}
-		
-		function my_load(id){
-			editAreaLoader.setValue(id, "The content is loaded from the load_callback function into EditArea");
-		}
-		
-</script>
-
-
+<script language="Javascript" type="text/javascript" src="@{'/public/javascripts/edit_area.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
 
 <h1>Viewer</h1>
