changed favicon, about text

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -49,8 +49,7 @@
 	<div id="about">
 		<h3>About</h3>
 		<p>
-			The QEFWeb has been developed with the purpose to use the SPARQL...
-		
+		QEFWeb - A GUI Web Front-End to execute and manage Query Execution Plans using QEF (Query Evaluation Framework).
 		</p>
 	</div>
 </div>
