changed and moved some images; altered some index text; minor changes in css

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,15 +23,14 @@
 		     	<div id="w3c">
 		     		<small>
 				 		<ul>
-				 			<li>XML results according to <a href="http://www.w3.org/TR/rdf-sparql-XMLres/">SPARQL Query Results XML Format</a></li>
-							<li>JSON results according to <a href="http://www.w3.org/TR/rdf-sparql-json-res/">Serializing SPARQL Query Results in JSON</a></li>
+				 			<li>XML output according to <a href="http://www.w3.org/TR/rdf-sparql-XMLres/">SPARQL Query Results XML Format</a></li>
+							<li>JSON output according to <a href="http://www.w3.org/TR/rdf-sparql-json-res/">Serializing SPARQL Query Results in JSON</a></li>
 						</ul>
 					</small>
 				</div>
 		    	<p>
-		    	Universidade Federal do Ceará - Advanced Research in DataBase - ARIDA<br/>
-		    	LNCC - Laboratório Nacional de Computação Científica
-		    	
+		    	Laboratório Nacional de Computação Científica (LNCC) - Extreme Data Lab (DEXL)<br/>
+		    	Universidade Federal do Ceará (UFC) - Advanced Research in DataBase (ARIDA)
 		    	</p>
 		    </div>
         
