--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,7 +3,7 @@ CSS from the QEFWEb - Query Execution Plans using QEF
 Further informations: https://github.com/franzejr/qefweb
 */
 body {
-  background-image:url('bg.png');
+  background-image:url('../images/bg.png');
   background-color: #EEEEEE;
   background-repeat: repeat;
   font-family: "Lucida Grande", Verdana, sans-serif;
@@ -11,15 +11,15 @@ body {
 }
 
 #topPage{
-	background-image: url('qef2.png');
+	background-image: url('../images/qef3.png');
 	background-color: #3B393F;
 	background-repeat: no-repeat;
-	height:86px;
+	height:70px;
 }
 
 #all{
   background: none repeat scroll 0 0 white;
-  border-top: 3px solid white;
+  border-top: 5px solid #3B393F;
   width:940px;
   min-height:250px;
   box-shadow:0px 5px 24px #888888;
@@ -40,15 +40,12 @@ body {
 
 #w3c{
 	background: none repeat scroll 0 0 white;
-	text-align:right;
-}
-
-#w3c li{
-	margin-right:10px;
+	text-align:left;
 }
 
 #w3c ul{
 	list-style-type:none;
+	padding-bottom: 10px;
 }
 
 #w3c a{
