changed submit buttom value in named parameters form

--- a/app/views/Application/formParams.html
+++ b/app/views/Application/formParams.html
@@ -24,7 +24,7 @@
 	#{list items:namedParams, as:'namedParam' }
 	<p>${namedParam} <input type="text" name="${namedParam.substring(2)}" /></p>
 	#{/list}
-	<p><input type="submit" value="Enviar"/></p>
+	<p><input type="submit" value="Submit"/></p>
 	</form>
 
 	<h3>Examples of valid parameters</h3>
