changed some texts in views and README

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -17,7 +17,7 @@
 <div id="content">
 	<h1>QEF Web</h1>
 	<br/><br/><br/>
-	<h3>Plans</h3>
+	<h3>Query Plans</h3>
 	<table align="center">
 	<tr class="title">
 		<th>
