--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,7 +30,7 @@
 				</div>
 		    	<p>
 		    	Laboratório Nacional de Computação Científica (LNCC) - Extreme Data Lab (DEXL)<br/>
-		    	Universidade Federal do Ceará (UFC) - Advanced Research in DataBase (ARIDA)
+		    	Universidade Federal do Ceará (UFC) - Advanced Research in Database (ARIDA)
 		    	</p>
 		    </div>
         
