mensagem personalizada referente às alterações realizadas

--- a/app/views/Application/sendDiseasesResults.html
+++ b/app/views/Application/sendDiseasesResults.html
@@ -11,7 +11,7 @@ ${name}
 			<td>
 				<!-- ${mylist.getDs().getValue()}-->	
 			</td>
-			<td><a href="@{sendDrugsResults()}?diseaseName=${mylist.getDsn().getValue()} ">
+			<td><a href="@{sendDrugsResults()}?diseaseName=${mylist.getDs().getValue()} ">
 					${mylist.getDsn().getValue()} 
 				</a>
 			</td>
