mensagem personalizada referente às alterações realizadas

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -52,6 +52,13 @@
 		QEFWeb - A GUI Web Front-End to execute and manage Query Execution Plans using QEF (Query Evaluation Framework).
 		</p>
 	</div>
+	
+	<div id="cases">
+		<h3>Case Study</h3>
+		<p>
+		<a href="http://localhost:9001/queryDiseasesOccurrences">click here </a>
+		</p>
+	</div>
 </div>
 
 
