--- a/app/views/Application/sendDrugsResults.html
+++ b/app/views/Application/sendDrugsResults.html
@@ -5,7 +5,7 @@
 
 <table>
 	<tr>
-		<p>Lista das drogas referente a doença selecionada,clique na droga desejada:</p>
+		<p>Those is the correspondence Drugs. Please, choose the desired drug :</p>
 		<br> 
 	#{list items:mylistdiseases,as:'mylistdisease'}
 		<tr>
