--- a/app/views/Application/showDrugDetails.html
+++ b/app/views/Application/showDrugDetails.html
@@ -4,14 +4,14 @@
 #{extends 'main.html' /} 
 #{set title:'Home' /}
 
-<p>Detalhes da droga</p>
+<p>Drug Details</p>
 		<br> 
 <table>
 	<tr>
 		
 	#{list items:mylistsdrugdetails,as:'mylistsdrugdetail'}
 		<tr>
-			<td>doença:
+			<td>
 			</td>
 		</tr>
 		<tr>
