--- a/app/views/Application/queryDiseasesOccurrences.html
+++ b/app/views/Application/queryDiseasesOccurrences.html
@@ -2,12 +2,23 @@
 #{set title:'Home' /} 
 
 
+
+
 #{form @sendDiseasesResults()}
 
 #{ifErrors}
 <p class="error">Please correct these errors.</p>
 #{/ifErrors} 
-
+<table>
+	<tr>
+		<td>
+			
+		</td>
+		<td>
+			<a align="left" href="http://localhost:9001" > Return to home </a>
+		</td>
+	</tr>
+</table>
 <p> Case Study: Drugs & Diseases<p> 
 
 <table>
@@ -20,4 +31,8 @@
 		</td>
 		<td><input type="submit" value="submit" /> #{/form}</td>
 	</tr>
+	<tr>
+	</tr>
+	
 </table>
+<br>
