a javascript event when a user leave the textfield  blank in the queryDiseasesOcurrences view

--- a/app/views/Application/sendDrugsResults.html
+++ b/app/views/Application/sendDrugsResults.html
@@ -2,15 +2,6 @@
  
  
 #{set title:'Home' /}
-<table>
-	<tr>
-		<td>
-			<a  href="http://localhost:9001/sendDiseasesResults" > Previous </a>
-			
-		</td>
-	</tr>
-
-</table>
 
 <table>
 	<tr>
@@ -23,7 +14,7 @@
 
 
 <table>
-<p>Those are the correspondence Drugs. Please, choose the desired drug :</p>
+<p><b>Those are the correspondence Drugs. Please, choose the desired drug:</b></p>
 <br>
 #{if error}
 	<tr>
@@ -48,3 +39,4 @@
 	#{/else}
 	
 </table>
+
