--- a/app/views/Application/showDrugDetails.html
+++ b/app/views/Application/showDrugDetails.html
@@ -3,19 +3,12 @@
 
 <table>
 	<tr>
-		<td><a href="http://localhost:9001/sendDrugsResults">
-				Previous </a></td>
-	</tr>
-
-</table>
-<table>
-	<tr>
 		<td><a href="http://localhost:9001"> Return to home </a></td>
 	</tr>
 
 </table>
 
-<p>Drug Details</p>
+<p><b>Drug Details</b></p>
 <br>
 	<table>
 	#{if error}
