--- a/app/views/Application/sendDiseasesResults.html
+++ b/app/views/Application/sendDiseasesResults.html
@@ -4,20 +4,13 @@
 
 <table>
 	<tr>
-		<td><a href="http://localhost:9001/queryDiseasesOccurrences">
-				Previous </a></td>
-	</tr>
-
-</table>
-<table>
-	<tr>
 		<td><a href="http://localhost:9001"> Return to home </a></td>
 	</tr>
 </table>
 
 <table>
 	
-		<p>Choose the desired disease:</p>
+		<p><b>Choose the desired disease:</b></p>
 		<br>
 #{if error}
 	<tr>
@@ -30,9 +23,10 @@
 	#{else} 
 	#{list items:mylists,as:'mylist'}
 		<tr>
-			<td><a href="@{sendDrugsResults()}?diseaseName=${mylist.getDs().getValue()} ">
+			<td><a id="link" href="@{sendDrugsResults()}?diseaseName=${mylist.getDs().getValue()} ">
 					${mylist.getDsn().getValue()} </a></td>
 		</tr>
 	#{/list} 
 	#{/else}
 </table>
+
