change home link

--- a/app/views/Application/queryDiseasesOccurrences.html
+++ b/app/views/Application/queryDiseasesOccurrences.html
@@ -16,7 +16,7 @@
 			
 		</td>
 		<td>
-			<a align="left" href="http://localhost:9001" > Return to home </a>
+			<a align="left" href="@{index()}" > Return to home </a>
 		</td>
 	</tr>
 </table>
