--- a/app/views/Application/showDrugDetails.html
+++ b/app/views/Application/showDrugDetails.html
@@ -3,7 +3,7 @@
 
 <table>
 	<tr>
-		<td><a href="http://localhost:9001"> Return to home </a></td>
+		<td><a href="@{index()}"> Return to home </a></td>
 	</tr>
 
 </table>
