--- a/app/views/Application/sendDrugsResults.html
+++ b/app/views/Application/sendDrugsResults.html
@@ -6,7 +6,7 @@
 <table>
 	<tr>
 		<td>
-			<a  href="http://localhost:9001" > Return to home </a>
+			<a  href="@{index()}" > Return to home </a>
 		</td>
 	</tr>
 
