--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -89,7 +89,7 @@ h1,h2{
   font-size: 14px;
   padding: 5px 10px;
   text-decoration: none;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   text-shadow: none;
   border-radius: 3px;
 }
